--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-* {
+.App {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -37,4 +37,22 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.formInput {
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  outline: none;
+  padding: 30px 50px 6px 6px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid #dddddd;
+  font-size: 25px;
+}
+
+.formInput:focus {
+  outline: none !important;
+  border-color: #719ece;
+  box-shadow: 0 0 10px #719ece;
 }
