--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,7 @@
-.App {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* .App {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -72,4 +75,10 @@
 .postCardTitle {
   font-size: 30px;
   font-weight: bold;
+} */
+
+* {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
 }
