--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,84 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* .App {
-  text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.formInput {
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  outline: none;
-  padding: 30px 50px 6px 6px;
-  margin: 5px 1px 3px 0px;
-  border: 1px solid #dddddd;
-  font-size: 25px;
-}
-
-.formInput:focus {
-  outline: none !important;
-  border-color: #719ece;
-  box-shadow: 0 0 10px #719ece;
-}
-
-.post {
-  margin-top: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 20px;
-  border: 1px solid #dddddd;
-  border-radius: 5px;
-  background-color: #fafafa;
-  width: 30%;
-  text-align: left;
-}
-
-.postCardTitle {
-  font-size: 30px;
-  font-weight: bold;
-} */
 
 * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-align: center;
+}
+
+@layer components {
+  .pageHeader {
+    font-size: 2.25rem /* 36px */;
+    line-height: 2.5rem /* 40px */;
+    font-weight: 700;
+  }
 }
