--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,6 @@
 * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-align: center;
 }
 
 @layer components {
@@ -13,5 +12,15 @@
     font-size: 2.25rem /* 36px */;
     line-height: 2.5rem /* 40px */;
     font-weight: 700;
+  }
+
+  li {
+    display: inline;
+    padding: 10px;
+    color: #fff;
+    font-size: 20px;
+  }
+  li:hover {
+    text-decoration: underline;
   }
 }
