Better user login and register form styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,10 @@
 }
 
 @layer components {
+  label {
+    font-weight: 600;
+  }
+
   .pageHeader {
     font-size: 2.25rem /* 36px */;
     line-height: 2.5rem /* 40px */;
