Make cursor pointer on hover over the .btn class

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -48,11 +48,14 @@
     transition-property: all;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 150ms;
+    cursor: pointer;
   }
 
   /* Click of button */
   .btn:active {
-    font-size: 1.5rem /* 24px */;
-    line-height: 2rem /* 32px */;
+    /* font-size: 1.5rem 24px; */
+    /* line-height: 2rem 32px; */
+    --tw-bg-opacity: 1;
+    background-color: rgb(229 231 235 / var(--tw-bg-opacity));
   }
 }
