--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @layer components {
@@ -15,7 +17,7 @@
   .pageHeader {
     font-size: 2.25rem /* 36px */;
     line-height: 2.5rem /* 40px */;
-    font-weight: 700;
+    font-weight: 900;
   }
 
   li {
@@ -23,9 +25,24 @@
     color: #fff;
     font-size: 20px;
     margin-right: 10px;
+    background: linear-gradient(
+        to right,
+        rgba(100, 200, 200, 1),
+        rgba(100, 200, 200, 1)
+      ),
+      linear-gradient(
+        to right,
+        rgba(255, 0, 0, 1),
+        rgba(255, 0, 180, 1),
+        rgba(0, 100, 200, 1)
+      );
+    background-size: 100% 0.1em, 0 0.1em;
+    background-position: 100% 100%, 0 100%;
+    background-repeat: no-repeat;
+    transition: background-size 100ms;
   }
   li:hover {
-    text-decoration: underline;
+    background-size: 0 0.1em, 100% 0.1em;
   }
 
   .btn {
