--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,19 @@
     line-height: 2.5rem /* 40px */;
     font-weight: 900;
   }
+  .floating-input > input::placeholder {
+    color: transparent;
+  }
+
+  .floating-input > input:focus,
+  .floating-input > input:not(:placeholder-shown) {
+    @apply pt-8;
+  }
+
+  .floating-input > input:focus ~ label,
+  .floating-input > input:not(:placeholder-shown) ~ label {
+    @apply opacity-75 scale-75 -translate-y-3 translate-x-1;
+  }
 
   li {
     display: inline;
