Create new post

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,7 +33,7 @@
     @apply opacity-75 scale-75 -translate-y-3 translate-x-1;
   }
 
-  li {
+  .navUl > li {
     display: inline;
     color: #fff;
     font-size: 20px;
